-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.2
-
-
5852716178972dd34df34dabc52a6616eead0aca (qt/qtwebengine/dev) 97d8dc52b497c5202742280bfd2cf5fa54eb0302 (qt/qtwebengine/5.15)
Loading local pdf files with QQuickPdfDocument doesn't work on Windows. No matter what is passed it'll result in "file not found". In contrast loading resource files would work.
Steps to reproduce the issue:
- Run the qml pdfviewer example
- Try to open any local .pdf file
For Gerrit Dashboard: QTBUG-88938 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
323951,3 | QtPdf: Fix for loading local .pdf files on Windows | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
324684,2 | QtPdf: Fix for loading local .pdf files on Windows | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |