QtPdf: Fix for loading local .pdf files on Windows

QQuickPdfDocument passed source QUrl::path() to QPdfDocument::load.
QUrl::path() output gets "/" as prefix on Windows preventing the file
from being found so this needs to be accounted for by changing it to
QUrl::toLocalFile().

Fixes: QTBUG-88938
Pick-to: 5.15
Change-Id: I52ed44f67c22bea31637050442487e1914011de9
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>